<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormationActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cf1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cf" />

        <Button
            android:id="@+id/cf2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/cf" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/lam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lam" />

        <Button
            android:id="@+id/cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/cam" />

        <Button
            android:id="@+id/ram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/ram" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp">

        <Button
        android:id="@+id/ldm"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/ldm" />

        <Button
            android:id="@+id/cdm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="cdm" />

        <Button
            android:id="@+id/rdm"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/rdm" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/cb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb" />

        <Button
            android:id="@+id/cb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/cb" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/gk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gk" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="70dp">

        <Button
            android:id="@+id/view_players"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/view_team" />
    </LinearLayout>


</LinearLayout>