<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/info_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onClick"
        android:text="@string/info_button" />
    <Button
        android:id="@+id/news_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/info_button"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:layout_marginTop="15dp"
        android:text="@string/news_button" />

    <Button
        android:id="@+id/formation_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/news_button"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:layout_marginTop="15dp"
        android:text="@string/formation_button" />

    <Button
        android:id="@+id/store_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/formation_button"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:layout_marginTop="15dp"
        android:text="@string/store_button" />

    <Button
        android:id="@+id/location_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/store_button"
        android:onClick="onClick"
        android:layout_marginTop="15dp"
        android:text="@string/location_button" />
</RelativeLayout>