<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuyActivity">
<!--
    <ImageView
        android:id="@+id/store_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true" />

        <ScrollView
            android:id="@+id/store_scrollview"
            android:layout_width="wrap_content"
            android:layout_below="@+id/store_image"
            android:layout_height="wrap_content">
    -->
    <TextView
        android:text="@string/store_size"
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/size_spinner"
        android:layout_below="@+id/size" />
    <TextView
        android:text="@string/store_colour"
        android:id="@+id/colour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/size_spinner"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/colour_spinner"
        android:layout_below="@+id/colour"/>
    <TextView
        android:text="@string/store_delivery"
        android:id="@+id/delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/colour_spinner"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delivery_spinner"
        android:layout_below="@+id/delivery"/>
    <!-- </ScrollView> -->

    <Button
        android:id="@+id/buy"
        android:layout_below="@id/delivery_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_button" />

    <Button
        android:id="@+id/back_to_store"
        android:layout_toRightOf="@+id/buy"
        android:layout_alignBottom="@+id/buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_store" />

</RelativeLayout>